# omnidep

./: .flake8  .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: test.yml
omnidep/: __main__.py  command.py  errors.py  imports.py  main.py  packages.py  project.py
omnidep/tst/: errors_test.py  imports_test.py  packages_test.py  project_test.py
omnidep/tst/test_cases/: every_import.py~
omnidep/tst/test_cases/case_insensitive_sorted/: pyproject.toml
omnidep/tst/test_cases/case_sensitive_sorted/: pyproject.toml
omnidep/tst/test_cases/dependency_in_test_code/: pyproject.toml
omnidep/tst/test_cases/dependency_in_test_code/tests/: test_code.py
omnidep/tst/test_cases/dev_dependencies_new/: pyproject.toml
omnidep/tst/test_cases/dev_dependencies_old/: pyproject.toml
omnidep/tst/test_cases/failed_import/: pyproject.toml
omnidep/tst/test_cases/failed_import/failed_import/: code.py
omnidep/tst/test_cases/failed_import_but_ignored/: pyproject.toml
omnidep/tst/test_cases/namespace_none_declared/: pyproject.toml
omnidep/tst/test_cases/namespace_one_declared/: pyproject.toml
omnidep/tst/test_cases/namespace_one_declared/namespace_code/: code.py
omnidep/tst/test_cases/namespace_three_declared/: pyproject.toml
omnidep/tst/test_cases/parent_child_configured/: pyproject.toml
omnidep/tst/test_cases/parent_child_configured/parent_child/: code.py
omnidep/tst/test_cases/parent_child_misconfigured/: pyproject.toml
omnidep/tst/test_cases/unsorted/: pyproject.toml
